# TinyDataBase

./: CMakeLists.txt  LICENSE  README.md
include/: dbms.hpp
src/: dbms.cpp
test/: dbms_test.cpp
